kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opslync-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opslync-frontend
  template:
    metadata:
      labels:
        app: opslync-frontend
    spec:
      containers:
        - name: opslync-frontend
          image: opslync/opslync-frontend:v0.0.1  # Use the image name and tag you built earlier
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: opslync-frontend-service
spec:
  selector:
    app: opslync-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
